--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "font-awesome": "~4.1.0",
     "bootstrap": "~3.1.1",
     "fastclick": "~1.0.0",
-    "overthrow": "~0.7.0"
+    "overthrow": "~0.7.0",
+    "angular-ui-calendar": "~1.0.0"
   }
 }
